<resources>
    <string name="app_name">Covid19VolunteerApp</string>
    <string name="welcome_heading">Welcome</string>
    <string name="welcome_message">Let\'s join hands together to help each other during the Covid-19 crisis.\n
        \n
        1. If you or someone you know cannot go out of your home for some reason (elderly / disabled), you can use this app to get stuff delivered.\n
        \n
        2. If you want to help, you can use this app to volunteer to deliver the goods to people in need near you.
    </string>
    <string name="sign_up">sign up</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_login">Login</string>
    <string name="tell_us_about_yourself">Tell us about yourself:</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="a_volunteer">A volunteer</string>
    <string name="someone_who_needs_help">Someone who needs help</string>
    <string name="are_you_a">Are you a:</string>
    <string name="title_activity_phone_verification">PhoneVerificationActivity</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_the_verification_code_recieved_on_your_provided_phone_number">Please enter the verification code recieved on your provided phone number:</string>
    <string name="log_in">log in</string>
    <string name="title_activity_main">CoVolunteer</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_add_request">Add Request</string>
    <string name="write_your_request_here">Write your request here</string>
    <string name="enter_your_locality_area">Enter your locality / area:</string>
    <string name="responses">responses</string>
    <string name="requests_in_your_area">Requests in your area:</string>
    <string name="title_activity_request_info">CoVolunteer</string>
    <string name="volunteer_for_help">Volunteer For Help</string>
    <string name="your_phone_number_will_be_shared">(Your name and phone number will be shared)</string>
    <string name="title_activity_user_request_info">UserRequestInfo</string>
</resources>
