<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".activity.WelcomeActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="32dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/welcome_heading"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/welcome_message"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:background="#2196f3"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:background="#2196f3"
            android:fontFamily="sans-serif-condensed"
            android:text="log in"
            android:textColor="@color/white"
            android:textSize="24sp" />


    </LinearLayout>

</layout>